syntax = "proto3";

option java_package = "com.cseiu.passnet.saga.recruitmentsaga";

package produceEvents;

service EventProducer {
    rpc ProducePostNewJobEvent (PostNewJobEvent) returns (SagaResponse) {}
    rpc ProduceAcceptStudentApplicationEvent (AcceptStudentApplicationEvent) returns (SagaResponse) {}
    rpc ProduceRemoveStudentApplicationEvent (RemoveStudentApplicationEvent) returns (SagaResponse) {}
    rpc ProduceDeleteJobEvent (DeleteJobEvent) returns (SagaResponse) {}
}

service ResponseProducer {
    rpc produceSuccessResponse(SuccessResponse) returns (SagaResponse) {}
    rpc produceFailureResponse(FailureResponse) returns (SagaResponse) {}
}

message SagaResponse {
    string message = 1;
}

message PostNewJobEvent {
    string eventId = 1;
    string ownerId = 2;
    string jobId = 3;
}

message AcceptStudentApplicationEvent {
    string eventId = 1;
    string jobId = 2;
    string taId = 3;
}

message RemoveStudentApplicationEvent {
    string eventId = 1;
    string jobId = 2;
    string taId = 3;
}

message DeleteJobEvent {
    string eventId = 1;
    string jobId = 2;
}

message SuccessResponse {
    string eventId = 1;
    string serviceName = 2;
}


message FailureResponse {
    string eventId = 1;
    string serviceName = 2;
}